--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
+    "uuid": "^11.1.0",
     "zod": "^3.24.3"
   }
 }
